services/scrypted/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      hostNetwork: true
      nodeSelector:
        nvidia.com/gpu.present: 'true'
      runtimeClassName: nvidia
      containers:
        - name: scrypted
          image: ghcr.io/koush/scrypted:v0.114.0-jammy-nvidia
          resources:
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - name: volume
              mountPath: /server/volume
          ports:
            - name: web
              containerPort: 11080
